# willow-go

./: .gitignore  .gitmodules  BENCHMARKS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  HACKING.md  LICENSE  Makefile  README.md  SECURITY.md  TECH_DEBT.md  doc.go  go.mod  go.sum  tools.go
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  mirror-to-codeberg.yml
cmd/willow-cli/: main.go  main_test.go
cmd/willow-smoketest/: main.go
cmd/willow-sync-demo/: main.go
datamodel/: area.go  area_test.go  bench_test.go  doc.go  entry.go  entry_test.go  example_test.go  fuzz_test.go  groupings.go  groupings_test.go  paths.go  paths_test.go  store.go  store_test.go  upstream_vectors_test.go
encoding/: cu64.go  cu64_quick_test.go  cu64_test.go  doc.go  fuzz_test.go
meadowcap/: auth_token.go  capability.go  capability_test.go  delegation.go  delegation_test.go  doc.go  example_test.go  handover_interop_test.go
mobile/: doc.go  mobile.go  mobile_test.go
testdata/: .gitignore
testdata/_genfixtures/: Cargo.toml  README.md
testdata/_genfixtures/src/: bytes32.rs  gen_area_in_area.rs  gen_entries.rs  gen_handover.rs  gen_path_extends_path.rs  gen_william3.rs  main.rs
testdata/areas/: relative.json
testdata/entries/: basic.json
testdata/meadowcap/: delegation_chains.json
testdata/paths/: basic.json  limits.json  relative.json
testdata/paths_rel/: extends.json
testdata/william3/: digests.json  william3vectors.txt
willow25/: bench_test.go  digest.go  doc.go  entry.go  example_test.go  william3.go  william3_vectors_test.go  willow25.go  willow25_test.go
